--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
