--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.0.3"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1"
   }
 }
