--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 PORT = 4000
-MONGODB_URL = mongodb://127.0.0.1:27017/ChildCareDatabasee
+MONGODB_URL = mongodb://127.0.0.1:27017/ChildCareDatabase
 JWT_SECRET = Pluscare
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = intekhabulhaque26@gmail.com
 MAIL_PASS = hykmkqkvgroyxbsi
+RAZORPAY_KEY =
+RAZORPAY_SECRET =
