update last new

--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ JWT_SECRET = Pluscare
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = intekhabulhaque26@gmail.com
 MAIL_PASS = hykmkqkvgroyxbsi
-RAZORPAY_KEY =
-RAZORPAY_SECRET =
+RAZORPAY_KEY = rzp_test_j3uMC3pJNVXJpR
+RAZORPAY_SECRET = iVdd7vf9Qopo1TKflmLWF8Ue
