--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-MONGODB_URL = mongodb://127.0.0.1:27017/database
+MONGODB_URL = mongodb://127.0.0.1:27017/ChildCareDatabase
 JWT_SECRET = Pluscare
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = intekhabulhaque26@gmail.com
