--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "shortid": "^2.2.16"
   }
 }
