--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^10.0.4",
     "recharts": "^2.11.0",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
